Bootstrapped for elm frontend

--- a/elm-index.html
+++ b/elm-index.html
@@ -19,7 +19,7 @@
 <script src="elm-out.js"></script>
 <script>
 [ Elm.Main.init({ node: document.getElementById("main-root") })
-, Elm.Instrument.init({ node: document.getElementById("instrument-root") })
+// , Elm.Instrument.init({ node: document.getElementById("instrument-root") })
 , Elm.ColorPicker.init({ node: document.getElementById("color-picker-root") })
 ]
 
