It has a beautiful interface for creating ensembles

--- a/elm-index.html
+++ b/elm-index.html
@@ -18,9 +18,9 @@
 
 <script src="elm-out.js"></script>
 <script>
-[ Elm.Main.init({ node: document.getElementById("main-root") })
+[ Elm.Main.init({ flags: 0, node: document.getElementById("main-root") })
 // , Elm.Instrument.init({ node: document.getElementById("instrument-root") })
-, Elm.ColorPicker.init({ node: document.getElementById("color-picker-root") })
+// , Elm.ColorPicker.init({ node: document.getElementById("color-picker-root") })
 ]
 
 </script>
