Created dev workflow files

--- a/elm-dev.html
+++ b/elm-dev.html
@@ -8,7 +8,7 @@
  <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon:ital@1&display=swap" rel="stylesheet"> 
-  <title>Synthony Pre-Prod</title>
+  <title>Syn elm-dev</title>
   <style>
 
 /* body { padding: 0; margin: 0; } .font-expression { font-family: "IM Fell French Canon", cursive; } */
@@ -24,25 +24,24 @@
 <body class="with-bulma">
 
 <div class="">
-  <div id="mini-song-maker"></div>
-  <!-- <div id="main-root"></div> -->
+  <div id="main-root"></div>
+  <div id="song-designer"></div>
 </div>
 
-<div id="instrument-root"></div>
 <audio id="audio-player"></audio>
 
 
-<div id="demo-combo-intro"></div>
-<div id="demo-combo-verse"></div>
-<div id="demo-combo-chorus"></div>
-<div id="demo-combo-outro"></div>
-<div id="demo-layout"></div>
+<!-- <div id="demo-combo-intro"></div> -->
+<!-- <div id="demo-combo-verse"></div> -->
+<!-- <div id="demo-combo-chorus"></div> -->
+<!-- <div id="demo-combo-outro"></div> -->
+<!-- <div id="demo-layout"></div> -->
 
 <div id="waveform"></div>
 <pre id="elm"></pre>
 
 
-<script src="assets/song-designer.js"></script>
+<script src="elm-dev-mode.js"></script>
 <script src="node_modules/wavesurfer.js/dist/wavesurfer.js"></script>
 
 <script>
