removed dupe node

--- a/elm-dev.html
+++ b/elm-dev.html
@@ -24,7 +24,7 @@
 <body class="with-bulma">
 
 <div class="">
-  <div id="main-root"></div>
+  <div id="mini-song-maker"></div>
   <div id="song-designer"></div>
 </div>
 
