Loads the webpack output

--- a/elm-dev.html
+++ b/elm-dev.html
@@ -21,6 +21,7 @@
 
   <script src="node_modules/wavesurfer.js/dist/wavesurfer.js"></script>
   <script src="assets/song-designer.js"></script>
+  <script src="out/webpack-out.js"></script>
 
 </body>
 </html>
